--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "nodemon src/server.js",
     "dbinit": "node src/db/dbinit.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "node src/db/dbSeed.js"
   },
   "keywords": [],
   "author": "",
