--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
-    "dbinit": "node src/db/dbinit.js",
+    "dbinit": "node src/db/dbinit2.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "seed": "node src/db/dbSeed.js"
   },
